Add more query parameters to `/v1/open-ngc`
